--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,7 +6,7 @@ $white: #ffffff;
 $softSilver: #959595;
 $lightSilver: rgb(#363636, 0.5);
 $validateError: #FF3333;
-
+$red: #f20d0d;
 // %massage-shared {
 //   font-size: 35px;
 //   color: red;
