--- a/src/sass/tamplates/_modal-submit.scss
+++ b/src/sass/tamplates/_modal-submit.scss
@@ -11,8 +11,8 @@
 
     width: 100%;
     height: 100%;
-    background: rgba(#000000, 0.3);
-    backdrop-filter: blur(1px);
+    background: rgba(#000000, 0.5);
+    // backdrop-filter: blur(1px);
     z-index: 950;
   &-visible {
     position: fixed;
@@ -22,15 +22,88 @@
   }
   &__dialog {
     display: block;
+    max-width: 400px;
     position: fixed;
-    top: 35%;
+    top: 50%;
     left: 0;
     right: 0;
+    transform: translateY(-50%);
     margin-right: auto;
     margin-left: auto;
-    max-width: 500px;
-    background-color: #fff;
-    padding: 100px;
-    // z-index: 999;
+    padding-bottom: 20px;
+    border-radius: 15px;
+    background: rgba($white, 0.7);
+  }
+  &__header {
+    background-color: $primary;
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 10px;
+  }
+  &__success {
+    display: inline-block;
+    vertical-align: middle;
+    width: 45px;
+    margin-right: 13px;
+    padding: 8px;
+    background: rgba($dark25, 0.8);
+    border-radius: 100%;
+  } 
+  &__title {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 19px;
+    font-weight: 400;
+  }
+  &__contact {
+    margin-bottom: 20px;
+  }
+  &__wait {
+    // border-left: 4px solid $primary;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 17px;
+    max-width: 100%;
+    text-align: left;
+    margin-bottom: 15px;
+  }
+  &__line {
+    width: 100%;
+    height: 3px;
+    background-color: $lightSilver;
+  }
+  &__info {
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  &__phone, &__email {
+    display: inline-block;
+    font-size: 17px;
+    color: $dark;
+    width: auto;
+    margin-top: 10px;
+    text-align-last: left;
+    & span {
+      text-decoration: underline;
+    }
+  }
+  &__close {
+    display: block;
+    // float: right;
+    margin: 0 auto;
+    background-color: $lightSilver;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: $white;
+    font-size: 17px;
+    font-weight: 500;
+    transition: all 300ms;
+    &:hover {
+      // transition: all;
+      background-color: $red;
+    }
   }
 }
